# products

./: .gitignore  README.md  dockerfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  pylint.yml  word-check.yml
api/chat/: controller.py  endpoint.py
api/example/: controller.py  endpoint.py
api/myntra_product/: controller.py  endpoint.py  model.py
shared/: db.py  db_helpers.py
